fix(visual): Fix test output screen alignment (#16536)
Whenever the test run fails the icon and text are out of alignment. This change sets the icon to be vertically aligned to the top.

Closes #16498

--- a/common/app/routes/Challenges/challenges.less
+++ b/common/app/routes/Challenges/challenges.less
@@ -29,6 +29,7 @@
 
   .big-icon {
     font-size: 30px;
+    vertical-align: top;
   }
 
   .error-icon {
